--- a/siamese/init.ipynb
+++ b/siamese/init.ipynb
@@ -196,31 +196,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "validation_pairs = [\n",
-    "    [\"Soccer is a popular sport\", \"Basketball is a team sport\"],\n",
-    "    [\"The Eiffel Tower is in Paris\", \"The Statue of Liberty is in New York\"],\n",
-    "    [\"Mangoes are a tropical fruit\", \"Pineapples are also tropical fruits\"],\n",
-    "    [\"Hiking in the mountains is refreshing\", \"Swimming in the ocean is relaxing\"],\n",
-    "    [\"Computer science involves coding\", \"Biology focuses on living organisms\"],\n",
-    "    [\"The Earth orbits the Sun\", \"The Moon orbits the Earth\"],\n",
-    "    [\"Cats have whiskers\", \"Snakes are limbless reptiles\"],\n",
-    "    [\"Writing code can be challenging\", \"Reading books is a leisurely activity\"],\n",
-    "    [\"Chemistry deals with chemical reactions\", \"Physics studies the laws of nature\"],\n",
-    "    [\"Mount Everest is the world's tallest peak\", \"K2 is also a tall mountain\"],\n",
-    "    [\"Artists create visual masterpieces\", \"Musicians compose melodious tunes\"],\n",
-    "    [\"Summer is hot and sunny\", \"Winter is cold and snowy\"],\n",
-    "    [\"Insects have six legs\", \"Spiders are arachnids with eight legs\"],\n",
-    "    [\"London is the capital of England\", \"Tokyo is the capital of Japan\"],\n",
-    "    [\"Learning a new language is a valuable skill\", \"Cooking delicious food is an art\"],\n",
-    "    [\"Elephants are large mammals\", \"Kangaroos are marsupials\"],\n",
-    "    [\"Rivers flow downstream to the sea\", \"Waterfalls are breathtaking natural wonders\"],\n",
-    "    [\"Astronomy explores celestial objects\", \"Geology studies the Earth's structure\"],\n",
-    "    [\"Singing requires vocal talent\", \"Dancing showcases body movements\"],\n",
-    "    [\"Gardening is a peaceful hobby\", \"Extreme sports offer adrenaline rushes\"]\n",
+    "    (\"I love cats\", \"I adore felines\"),\n",
+    "    (\"Dogs are loyal animals\", \"Cats are independent creatures\"),\n",
+    "    (\"Apples are red\", \"Bananas are yellow\"),\n",
+    "    (\"Pizza is delicious\", \"Ice cream is sweet\"),\n",
+    "    (\"Python is a programming language\", \"Java is also a programming language\"),\n",
+    "    (\"The sun rises in the east\", \"The moon shines at night\"),\n",
     "]\n",
     "\n",
-    "validation_labels = [1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0]\n"
+    "# Example labels (1 for similar, 0 for dissimilar)\n",
+    "validation_labels = [1, 0, 0, 1, 1, 0]"
    ]
   },
   {
@@ -242,7 +228,6 @@
     "validation_sequences_2 = tokenizer.texts_to_sequences([pair[1] for pair in validation_pairs])\n",
     "validation_sequences_2 = pad_sequences(validation_sequences_2, maxlen=max_seq_length)\n",
     "\n",
-    "# Calculate similarity scores\n",
     "similarity_scores = siamese_model.predict([validation_sequences, validation_sequences_2])"
    ]
   },
@@ -260,16 +245,14 @@
     }
    ],
    "source": [
-    "# Define the threshold (you can adjust this as needed)\n",
     "threshold = 0.5\n",
     "\n",
-    "# Initialize counters\n",
     "true_positives = 0\n",
     "true_negatives = 0\n",
     "false_positives = 0\n",
     "false_negatives = 0\n",
     "\n",
-    "# Compare each similarity score to the threshold\n",
+    "\n",
     "for i in range(len(validation_labels)):\n",
     "    if validation_labels[i] == 1:\n",
     "        if similarity_scores[i][0] >= threshold:\n",
@@ -282,12 +265,11 @@
     "        else:\n",
     "            true_negatives += 1\n",
     "\n",
-    "# Calculate F1 score\n",
+    "\n",
     "precision = true_positives / (true_positives + false_positives)\n",
     "recall = true_positives / (true_positives + false_negatives)\n",
     "f1_score = 2 * (precision * recall) / (precision + recall)\n",
     "\n",
-    "# Print F1 score\n",
     "print(f\"F1 Score: {f1_score:.2f}\")\n"
    ]
   },
@@ -308,11 +290,10 @@
     }
    ],
    "source": [
-    "# Calculate ROC curve and AUC\n",
-    "fpr, tpr, thresholds = roc_curve(validation_labels, similarity_scores[:, 0])  # Extract the first column\n",
-    "roc_auc = roc_auc_score(validation_labels, similarity_scores[:, 0])  # Extract the first column\n",
     "\n",
-    "# Plot ROC curve\n",
+    "fpr, tpr, thresholds = roc_curve(validation_labels, similarity_scores[:, 0]) \n",
+    "roc_auc = roc_auc_score(validation_labels, similarity_scores[:, 0]) \n",
+    "\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(fpr, tpr, label=f'AUC = {roc_auc:.2f}')\n",
     "plt.plot([0, 1], [0, 1], 'k--')\n",
