--- a/siamese/init.ipynb
+++ b/siamese/init.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -116,34 +116,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "12/12 [==============================] - 1s 2ms/step - loss: 0.4937 - accuracy: 0.4368\n",
+      "12/12 [==============================] - 1s 4ms/step - loss: 0.4869 - accuracy: 0.4711\n",
       "Epoch 2/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.3925 - accuracy: 0.4421\n",
+      "12/12 [==============================] - 0s 4ms/step - loss: 0.3883 - accuracy: 0.4684\n",
       "Epoch 3/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.3031 - accuracy: 0.4474\n",
+      "12/12 [==============================] - 0s 4ms/step - loss: 0.3019 - accuracy: 0.4816\n",
       "Epoch 4/10\n",
-      "12/12 [==============================] - 0s 3ms/step - loss: 0.2489 - accuracy: 0.4553\n",
+      "12/12 [==============================] - 0s 3ms/step - loss: 0.2489 - accuracy: 0.5000\n",
       "Epoch 5/10\n",
-      "12/12 [==============================] - 0s 1ms/step - loss: 0.2228 - accuracy: 0.4737\n",
+      "12/12 [==============================] - 0s 2ms/step - loss: 0.2250 - accuracy: 0.4895\n",
       "Epoch 6/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.2132 - accuracy: 0.4737\n",
+      "12/12 [==============================] - 0s 1ms/step - loss: 0.2136 - accuracy: 0.4921\n",
       "Epoch 7/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.2082 - accuracy: 0.4842\n",
+      "12/12 [==============================] - 0s 3ms/step - loss: 0.2091 - accuracy: 0.4921\n",
       "Epoch 8/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.2049 - accuracy: 0.4816\n",
+      "12/12 [==============================] - 0s 4ms/step - loss: 0.2051 - accuracy: 0.4974\n",
       "Epoch 9/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.2020 - accuracy: 0.5132\n",
+      "12/12 [==============================] - 0s 4ms/step - loss: 0.2018 - accuracy: 0.5026\n",
       "Epoch 10/10\n",
-      "12/12 [==============================] - 0s 2ms/step - loss: 0.2000 - accuracy: 0.5053\n"
+      "12/12 [==============================] - 0s 4ms/step - loss: 0.1996 - accuracy: 0.4816\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.History at 0x247e380b0d0>"
+       "<keras.src.callbacks.History at 0x1f11696fdf0>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,15 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 113ms/step\n",
-      "Similarity Score: 1.0000001192092896\n",
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001F116976320> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 0s 138ms/step\n",
+      "Similarity Score: 1.0\n",
       "The texts are similar.\n"
      ]
     }
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,20 +206,21 @@
     "    (\"The sun rises in the east\", \"The moon shines at night\"),\n",
     "]\n",
     "\n",
-    "# Example labels (1 for similar, 0 for dissimilar)\n",
+    "\n",
     "validation_labels = [1, 0, 0, 1, 1, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 146ms/step\n"
+      "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001F116976320> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 0s 122ms/step\n"
      ]
     }
    ],
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +292,10 @@
     }
    ],
    "source": [
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
     "\n",
     "fpr, tpr, thresholds = roc_curve(validation_labels, similarity_scores[:, 0]) \n",
     "roc_auc = roc_auc_score(validation_labels, similarity_scores[:, 0]) \n",
